# cultural-trend-analysis

./: README.md  app.py  demo.html  demo_app.py  main.py  models.py  open_demo.py  pyproject.toml  replit.md  run_on_port_8080.py  serve_demo.py  simple_app.py  simple_run.py  test_reddit_auth.py  trend_analysis.py  trend_cache.py  trends_google.py  trends_manual.py  trends_reddit.py
data/: trend_cache.json
static/css/: custom.css
static/js/: main.js
templates/: google_trends.html  index.html  layout.html  manual_entry.html  reddit_trends.html  trend_detail.html
