[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.73.0",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.10",
    "pytrends>=4.9.2",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
]
